err/collective.portlet.foldercontents.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/collective'...
Listing './lib/python3.5/site-packages/collective/portlet'...
Listing './lib/python3.5/site-packages/collective/portlet/foldercontents'...
Listing './lib/python3.5/site-packages/collective/portlet/foldercontents/locales'...
Listing './lib/python3.5/site-packages/collective/portlet/foldercontents/locales/uk'...
Listing './lib/python3.5/site-packages/collective/portlet/foldercontents/locales/uk/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/portlet/foldercontents/profiles'...
Listing './lib/python3.5/site-packages/collective/portlet/foldercontents/profiles/default'...
Listing './lib/python3.5/site-packages/collective/portlet/foldercontents/tests'...
Compiling './lib/python3.5/site-packages/collective/portlet/foldercontents/widget.py'...
***   File "./lib/python3.5/site-packages/collective/portlet/foldercontents/widget.py", line 46
    except ValidationError, err:
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/collective.portlet.foldercontents-1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
